<resources>
    <string name="app_name">SnakeHealthManagement</string>

    <string name="signup_button">sign up</string>

    <string name="login_title_text">LOGIN</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_auto_text">次回から自動的にログイン</string>
    <string name="login_login_button">Log in</string>
    <string name="login_forgot_text">パスワードを忘れた場合</string>

    <string name="register_editicon_text"><u>アイコンを変更</u></string>
    <string name="register_title_text">REGISTER</string>
    <string name="register_editicon_button">icon_editbutton</string>
    <string name="register_username_hint">Username</string>

    <string name="verify_title_text">VERIFY</string>
    <string name="verify_description_text">メールに認証コードを送信しました\n認証コードを入力してください\n認証が完了すると\nパスワードがリセットされます</string>
    <string name="verify_code_hint">コードを入力</string>
    <string name="verify_resend_text">メールが送られてこない？　再送信</string>
    <string name="verify_send_button">SEND</string>
    <string name="verify_tologin_text">ログイン画面に戻る</string>

    <string name="reset_title_text">RESET</string>
    <string name="reset_password_hint">Password</string>
    <string name="reset_confirm_hint">Confirm</string>
    <string name="reset_login_button">Log in</string>
    <string name="reset_tologin_text">ログイン画面に戻る</string>

    <string name="menu_profile_button">Profile</string>
    <string name="menu_settings_button">Settings</string>
    <string name="menu_feedback_button">Feedback</string>
    <string name="menu_help_button">Help</string>
    <string name="menu_list_button">List</string>
</resources>
